gcp/00-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: monitoring-grafana
  labels:
    name: monitoring-grafana
