gcp/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring-grafana
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '3000'
      cloud.google.com/backend-config: '{"ports": {"80":"grafana-proxy-config"}}'
      cloud.google.com/neg: '{"ingress": true}'
spec:
  selector: 
    app: grafana
  type: NodePort  
  ports:
    - name: svc-port
      port: 80
      targetPort: pod-port
      protocol: TCP
